@@ -21,6 +21,7 @@ git-annex (5.20150206) UNRELEASED; urgency=medium
   * addurl: Avoid crash if quvi is not installed, when git-annex was
     built with process-1.2
   * bittorrent: Fix mojibake introduced in parsing arai2c progress output.
+  * fsck --from: If a download from a remote fails, propigate the failure.
 
  -- Joey Hess <id@joeyh.name>  Fri, 06 Feb 2015 13:57:08 -0400
 
